--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "firebase": "^8.6.8",
     "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
     "next": "13.4.12",
@@ -21,6 +22,7 @@
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.65.1"
   }
 }
