--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "firebase": "^8.6.8",
+    "firebase": "^8.10.1",
     "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
     "next": "13.4.12",
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-calendar": "^4.6.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
