--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "firebase": "^8.10.1",
+    "chart.js": "^4.3.3",
+    "faker": "^5.5.3",
     "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
     "next": "13.4.12",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-calendar": "^4.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-redux": "^8.1.2",
