--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/js-cookie": "^3.0.3",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
     "faker": "^5.5.3",
@@ -25,9 +26,11 @@
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@types/node": "20.5.0",
     "sass": "^1.65.1"
   }
 }
